--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <div class="container">
+    <div id="title" class="item0">
+      <img src="./images/logo.svg" alt="" />
+    </div>
+    <div class="text item1">
+      <h1 id="bold"><span id="thin">WE'RE</span><br />COMING<br />SOON</h1>
+      <p id="p" class="item4">
+        Hello fellow shoppers! We're currently building our new fashion store.
+        Add your email below to stay up-to-date with announcements and our
+        launch deals.
+      </p>
+      <div>
+        <form class="email" id='form' onsubmit='return validate()' autocomplete="off">
+          <input id="i-email" type="" value="" placeholder="Email Address" />
+          <img id="error" src="/images/icon-error.svg" alt="">
+          <button id='btn' ><img id="arrow" src="./images/icon-arrow.svg" alt="" /></button>
+        </form>
+        <div id="alert">Please provide a valid email</div>
+      </div>
+      
+    </div>
+    <div class="img item2">
+      <div id="img"></div>
+    </div>
+    <footer class="item3">
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io/challenges/base-apparel-coming-soon-page-5d46b47f8db8a7063f9331a0" target="_blank">Frontend Mentor</a>. Coded by <a
+          href="https://github.com/velaztro/coming-soon-frontEndMentor">Guillermo V. Castro</a>.
+      </p>
+    </footer>
+  </div>
+  <script src="/script.js"></script>
 </body>
+
 </html>
