--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <div>
         <form class="email" id='form' onsubmit='return validate()' autocomplete="off">
           <input id="i-email" type="" value="" placeholder="Email Address" />
-          <img id="error" src="/images/icon-error.svg" alt="">
-          <button id='btn' ><img id="arrow" src="./images/icon-arrow.svg" alt="" /></button>
+          <img id="error" src="/images/icon-error.svg" alt="error icon">
+          <button id='btn' ><img id="arrow" src="./images/icon-arrow.svg" alt="arrow icon" /></button>
         </form>
         <div id="alert">Please provide a valid email</div>
       </div>
     </div>
     <div class="img item2">
-      <div id="img"></div>
+      <div id="img" alt="hero img"></div>
     </div>
     <footer class="item3">
       <p class="attribution">
