--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div id="title" class="item0">
-      <img src="./images/logo.svg" alt="" />
+      <img src="./images/logo.svg" alt="Logo image" />
     </div>
     <div class="text item1">
       <h1 id="bold"><span id="thin">WE'RE</span><br />COMING<br />SOON</h1>
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="img item2">
-      <div id="img" alt="hero img"></div>
+      <div id="img" alt="hero image"></div>
     </div>
     <footer class="item3">
       <p class="attribution">
