--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div id="alert">Please provide a valid email</div>
       </div>
     </div>
-    <div class="img item2">
-      <div id="img" alt="hero image"></div>
+    <div class="img item2" role="img" alt="Hero image">
+      <div id="img"></div>
     </div>
     <footer class="item3">
       <p class="attribution">
