--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         launch deals.
       </p>
       <div>
-        <form class="email" id='form' onsubmit='return validate()' autocomplete="off">
+        <form class="email" id='form' onsubmit='return empty()' autocomplete="off">
           <input id="i-email" type="" value="" placeholder="Email Address" />
           <img id="error" src="/images/icon-error.svg" alt="error icon">
           <button id='btn' ><img id="arrow" src="./images/icon-arrow.svg" alt="arrow icon" /></button>
         </form>
-        <div id="alert">Please provide a valid email</div>
+        <div id="alert"></div>
       </div>
     </div>
     <div class="img item2" role="img" alt="Hero image">
