--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
       <div>
         <form class="email" id='form' onsubmit='return empty()' autocomplete="off">
-          <input id="i-email" type="" value="" placeholder="Email Address" />
+          <input id="input" type="" value="" placeholder="Email Address" />
           <img id="error" src="/images/icon-error.svg" alt="error icon">
           <button id='btn' ><img id="arrow" src="./images/icon-arrow.svg" alt="arrow icon" /></button>
         </form>
